--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ sites/default/files/*
 sites/default/settings.php
 
 sites/nationaldesignawards.org/files/*
-sites/nationaldesignawards/settings.php
+sites/nationaldesignawards.org/settings.php
