--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ sites/default/settings.php
 
 sites/nationaldesignawards.org/files/*
 sites/nationaldesignawards.org/settings.php
+
+sites/peoplesdesignaward.org/files/*
+sites/peoplesdesignaward.org/settings.php
