adding erc to codebase

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ sites/nationaldesignawards.org/settings.php
 
 sites/peoplesdesignaward.org/files/*
 sites/peoplesdesignaward.org/settings.php
+
+sites/educatorresourcecenter.org/files/*
+sites/educatorresourcecenter.org/settings.php
