adding design online codebase

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ sites/peoplesdesignaward.org/settings.php
 
 sites/educatorresourcecenter.org/files/*
 sites/educatorresourcecenter.org/settings.php
+
+sites/edesignonline.org/files/*
+sites/designonline.org/settings.php
